syntax = "proto3";
  
package caber.macaron;

import "proto/activity/activity_timestamp.proto";

// Represents timeline of activities for income statement, cash flow and balance sheet.
message EarningActivity {
	// Timestamp when activity happens.
	ActivityTimestamp activity_timestamp = 1;

  // Whether it is earning for yearly or quarterly.
  bool quarterly = 2;

  // Income statement metrics.
  double total_revenue = 3;
  double gross_profit = 4;
  double net_income = 5;
}
